--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
+    "mercadopago": "^2.0.15",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.8.0"
